[gd_scene load_steps=5 format=2]

[ext_resource path="res://app/items/AbstractItem.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/items/abstract.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "idle",
"speed": 1.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 29.966

[node name="AbstractItem" type="Area2D"]
position = Vector2( 0.210224, 0 )
input_pickable = false
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Icon" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="PickUpRange" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="SFX_PickUp" type="AudioStreamPlayer" parent="."]
[connection signal="body_entered" from="." to="." method="onPickupRangeBodyEntered"]
